docs: add TL;DR sections and Brian Goetz contributor profile
- Add TL;DR quick overview to datetime/index.md with API selection guide
- Add TL;DR to graalvm/index.md with performance comparison
- Add TL;DR to performance, lambda, string, syntax index pages
- Create Brian Goetz contributor profile (Java Language Architect)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>